# billios

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  integrate.yml  test.yml
src/: lib.rs
src/domain/: constants.rs  mod.rs  traits.rs  types.rs
src/field_test/: calculations.rs  mod.rs  types.rs
src/math/: calculations.rs  mod.rs  utilities.rs
